tests/invalid/noImplicitSelf.ts
// @ts-nocheck
declare function GetPlayers(): void;
Players: GetPlayers();
